--- a/test/assets/examplePreflight.css
+++ b/test/assets/examplePreflight.css
@@ -5,6 +5,15 @@
   border-style: solid;
   border-color: #e5e7eb;
 }
+* {
+  --tw-ring-inset: var(--tw-empty,/*!*/ /*!*/);
+  --tw-ring-offset-width: 0px;
+  --tw-ring-offset-color: #fff;
+  --tw-ring-color: rgba(59, 130, 246, 0.5);
+  --tw-ring-offset-shadow: 0 0 #0000;
+  --tw-ring-shadow: 0 0 #0000;
+  --tw-shadow: 0 0 #0000;
+}
 :root {
   -moz-tab-size: 4;
   -o-tab-size: 4;
