test: add new tests for #27[200~test: add new tests for #27

--- a/test/assets/preflight.css
+++ b/test/assets/preflight.css
@@ -134,6 +134,7 @@ input::-ms-input-placeholder {
 }
 img, svg, video, canvas, audio, iframe, embed, object {
   display: block;
+  vertical-align: middle;
 }
 img, video {
   max-width: 100%;
